# 0.00.13 (44455) Sep 28, 2010
9/28/10 change dielectric constant range to 1-5, per Noah P.
9/28/10 change battery voltage range to +-1.5V, per Noah P.
9/27/10 rename ScaleButtonNode to ZoomButtonNode, since my people are calling it a "zoom button"
9/27/10 create nodes for positive and negative charges, use in other places that require + and -
9/27/10 create scale button programmatically, image files looked lousy because these buttons are so small
# 0.00.12 (44365) Sep 24, 2010
9/24/10 replace PText("-") with PPath(Rectangle2D) on current indicator, so that "-" can be precisely centered
# 0.00.11 (44358) Sep 23, 2010
9/23/10 make current indicator fade out faster (500 ms)
9/23/10 change current indicator to use a constant transparency (0.75f) rather than proportional to dV/dt
# 0.00.10 (44355) Sep 23, 2010
9/23/10 modulate transparency of current indicator proportional to dV/dt, fade out when dV/dt=0
9/23/10 hide clock control panel, this sim contains no animations that should be pausable
9/23/10 make sim clock accessible to model
9/23/10 fix Add/Remove Wires button layout so that it doesn't overlap current indicator
9/23/10 create current indicator node, place on canvas, not wired up
9/23/10 increase value font size for bar meters
9/23/10 allow separate fonts for label and value on capacitor drag handles
9/23/10 use bold font for bar meter titles
9/23/10 reduce number of decimal places to 2 for all bar meters
9/23/10 use the same exponent for bar meter value and label, with max label format 10^N
# 0.00.09 (44322) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 10x10^N [44320]
# 0.00.08 (44318) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 1x10^N [44316]
# 0.00.07 (44315) Sep 22, 2010
9/22/10 remove tool tip and flashing max label from bar meters
# 0.00.06 (44263) Sep 21, 2010
9/21/10 dev version to discuss scale button on bar meters